# gtkemeraldia

./: .gitignore  ChangeLog  LICENSE  Makefile.am  README  configure.ac  crack.c  games.c  graphics.h  gtkemeraldia.desktop  score.c  usleep.c  xemeraldia.desktop  xemeraldia.desktop.in
bitmaps/: block1cr.xbm  block3cr.xbm  block4.xbm  block6cr.xbm  crush0.xbm  crush3.xbm  xemeraldia.xpm
po/: LINGUAS  Makefile.in  POTFILES.in  es.po  gl.po  gtkemeraldia.pot  nl.po  xemeraldia.pot
src/: Makefile.am  bitmaps.h  crack.c  games.c  games.h  graphics.c  graphics.h  gtkcompat.h  init-graphics.c  main.c  move.c  score.c
src/bitmaps/: block1.xbm  block2.xbm  block2cr.xbm  block3.xbm  block4cr.xbm  block5.xbm  block5cr.xbm  block6.xbm  crush1.xbm  crush2.xbm  crush4.xbm  star.xbm  star.xpm
